<resources>
    <string name="app_name" translatable="false">WhaleUtils</string>

    <string name="main_activity_label_sample_activities">Sample Activities</string>

    <string name="system_activity_label_title">Device &amp; System Information</string>
    <string name="system_label_system">System</string>
    <string name="system_label_device">Device</string>

    <string name="network_request_activity_label_title">Network Request</string>

    <string name="network_request_label_headers">Headers</string>
    <string name="network_request_label_parameters">Parameters</string>
    <string name="network_request_label_query_parameters">Query Parameters</string>
    <string name="network_request_label_response">Response</string>
    <string name="network_request_label_error">Error</string>

    <string name="network_request_button_add_header">Add header</string>
    <string name="network_request_button_add_parameter">Add parameter</string>
    <string name="network_request_button_send_request">Send request</string>

    <string name="network_request_input_api_url">API url</string>
    <string name="network_request_input_key">Key</string>
    <string name="network_request_input_value">Value</string>

    <string name="network_request_prompt_title_api_url">Enter API url</string>
    <string name="network_request_prompt_message_api_url">Please enter the url with \"https\" protocol prefix</string>
    <string name="network_request_prompt_title_header">Add header</string>
    <string name="network_request_prompt_message_header">If it\'s available, please enter the header key and value</string>
    <string name="network_request_prompt_title_parameter">Add parameter</string>
    <string name="network_request_prompt_message_parameter">If it\'s available, Please enter the parameter key and value</string>
    <string name="network_request_prompt_title_send_request">Make a request</string>
    <string name="network_request_prompt_message_send_request">Once the settings is done, you can make a request</string>

    <string name="prompt_hint_skip">Click \"%s\" or the focal to skip the prompt.</string>
    <string name="prompt_hint_continue">Click anywhere to continue</string>

    <string name="tag_card_header" translatable="false">header</string>
    <string name="tag_card_footer" translatable="false">footer</string>
</resources>